# ansible-role-atos-hsm

./: .ansible-lint  .gitreview  README.rst  setup.cfg  test-requirements.txt  tox.ini  vars.yaml.sample
defaults/: main.yaml
handlers/: main.yaml
releasenotes/notes/: add-high-availability-support-44343eaf5563f5c7.yaml
tasks/: main.yaml
templates/: proteccio.rc.j2
