[metadata]
name = ansible-role-atos-hsm
summary = ansible-role-atos-hsm - Ansible role to configure ATOS HSM clients.
description-file =
    README.rst
author = TripleO Team
author-email = alee@redhat.com
home-page = https://github.com/dmend/ansible-role-atos-hsm
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/atos-hsm/defaults = defaults/*
    share/ansible/roles/atos-hsm/meta = meta/*
    share/ansible/roles/atos-hsm/tasks = tasks/*
    share/ansible/roles/atos-hsm/templates = templates/*
    share/ansible/roles/atos-hsm/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
